<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:layout_width="177dp"
        android:layout_height="20dp"
        android:layout_weight="0" />

    <TextView
        android:id="@+id/evenement_name"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_weight="0"
        android:text="@string/evenement_name"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="24sp" />
<!--
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_weight="0"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        app:srcCompat="@android:drawable/divider_horizontal_textfield" />
-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="0">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:adjustViewBounds="false"
            android:cropToPadding="true"
            android:scaleType="fitCenter"
            app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

        <Space
            android:layout_width="35dp"
            android:layout_height="47dp"
            android:layout_weight="0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="335dp"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:text="@string/evenement_time"
            android:textAlignment="textStart"
            android:textSize="18sp" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_weight="0"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        app:srcCompat="@android:drawable/divider_horizontal_textfield" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_notifications_black_24dp" />

        <Space
            android:layout_width="37dp"
            android:layout_height="47dp"
            android:layout_weight="0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_weight="0"
            android:text="@string/evenement_alerte"
            android:textAlignment="viewStart"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp" />



    </LinearLayout>

</LinearLayout>
